tests/test_data/CodeStructureSnippets/good/lol.ifj21
require "ifj21"
functio
local vysl : integer = 0
