tests/test_data/CodeStructureSnippets/bad/var_dec_syn_err.ifj21
require "ifj21"
local vysl : integer = 0